--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+#Eclipse config files
+.classpath
+.project
+.settings/
+
 # Package Files #
 *.jar
 *.war
